--- a/template.yaml
+++ b/template.yaml
@@ -10,6 +10,10 @@ Globals:
   Function:
     Timeout: 3
     Runtime: python3.8
+    Environment:
+      Variables:
+        BINGSU_DONATION_TRANS_TABLE_NAME: !Ref DonationTransTable
+        BINGSU_TOTAL_SUM_TABLE_NAME: !Ref TotalSumTable
 
 Resources:
   AddDonationTransFunction:
@@ -29,6 +33,18 @@ Resources:
         - AttributeName: transaction_id
           KeyType: HASH
       TableName: "BingsuDonationTrans"
+      
+  TotalSumTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: transaction_id
+          AttributeType: S
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: transaction_id
+          KeyType: HASH
+      TableName: "BingsuTotalSum"
       
 
 Outputs:
